--- a/real-time-vocabulary-app/libs/share-ui/src/lib/information-card/information-card.component.html
+++ b/real-time-vocabulary-app/libs/share-ui/src/lib/information-card/information-card.component.html
@@ -4,9 +4,11 @@
   </mat-card-header>
   <mat-card-content>
     <p>{{ assessment.description }}</p>
-    <p><strong>Time:</strong> {{ assessment.time }}</p>
+    <p><strong>Time:</strong> {{ assessment.duration }} minutes</p>
+    <p *ngIf="assessment?.attempt"><strong>Attempts:</strong> {{ assessment.attempt }}</p>
+    <ng-content/>
   </mat-card-content>
   <mat-card-actions>
-    <button class="join-btn" mat-button>Join Assessment</button>
+    <button class="join-btn" mat-button> Join Assessment</button>
   </mat-card-actions>
 </mat-card>
