Implemented Quiz with validation

--- a/real-time-vocabulary-app/apps/real-time-vocabulary-app/src/app/components/assessment-detail/assessment-detail.component.html
+++ b/real-time-vocabulary-app/apps/real-time-vocabulary-app/src/app/components/assessment-detail/assessment-detail.component.html
@@ -1,7 +1,8 @@
 <div class="assessment-detail">
   <lib-information-card
     (cardClick)="showTheAssessment()"
-    [assessment]="assessmentDetail">
+    [assessment]="assessmentDetail"
+    [primaryButtonText]="'Start'">
     <h4>Rules: </h4>
     <p [innerHTML]="assessmentDetail.rule">
     </p>
