--- a/real-time-vocabulary-app/apps/real-time-vocabulary-app/src/app/components/assessment-cards/assessment-cards.component.scss
+++ b/real-time-vocabulary-app/apps/real-time-vocabulary-app/src/app/components/assessment-cards/assessment-cards.component.scss
@@ -1,4 +1,4 @@
-.home-container {
+.home-page-container {
   padding: 20px;
   text-align: center;
   height: auto;
@@ -66,7 +66,7 @@
     grid-template-columns: 1fr;
   }
 
-  .home-container {
+  .home-page-container {
     padding: 10px;
   }
 
