Done implement leader board

--- a/real-time-vocabulary-app/libs/share-ui/src/lib/countdown-timer/countdown-timer.component.html
+++ b/real-time-vocabulary-app/libs/share-ui/src/lib/countdown-timer/countdown-timer.component.html
@@ -1,1 +1,5 @@
-<p>countdown-timer works!</p>
+<div class="timer-container">
+  <div class="timer">
+    <span>{{ timeLeft }}</span>
+  </div>
+</div>
