--- a/real-time-vocabulary-app/libs/share-ui/src/lib/multiple-question-choice/multiple-question-choice.component.html
+++ b/real-time-vocabulary-app/libs/share-ui/src/lib/multiple-question-choice/multiple-question-choice.component.html
@@ -1,1 +1,19 @@
-<p>multiple-question-choice works!</p>
+<mat-card class="question-card">
+  <mat-card-header>
+    <mat-card-title>{{ question.question }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-radio-group [formControl]="quizFormControl">
+      <mat-radio-button
+        *ngFor="let option of question.choices"
+        [value]="option"
+      >
+        {{ option }}
+      </mat-radio-button>
+    </mat-radio-group>
+
+    <div *ngIf="quizFormControl.invalid && quizFormControl.touched" class="error">
+      <small class="error-message">This question is required.</small>
+    </div>
+  </mat-card-content>
+</mat-card>
