--- a/real-time-vocabulary-app/libs/share-ui/src/lib/quiz-navigation-action-buttons/quiz-navigation-action-buttons.component.html
+++ b/real-time-vocabulary-app/libs/share-ui/src/lib/quiz-navigation-action-buttons/quiz-navigation-action-buttons.component.html
@@ -1,1 +1,4 @@
-<p>quiz-navigation-action-buttons works!</p>
+<mat-card-actions>
+  <button (click)="previousQuestion()" color="primary" mat-stroked-button> Previous</button>
+  <button (click)="nextQuestion()" color="primary" mat-stroked-button> Next</button>
+</mat-card-actions>
