--- a/real-time-vocabulary-app/libs/share-ui/src/lib/information-card/information-card.component.html
+++ b/real-time-vocabulary-app/libs/share-ui/src/lib/information-card/information-card.component.html
@@ -9,6 +9,6 @@
     <ng-content/>
   </mat-card-content>
   <mat-card-actions>
-    <button class="join-btn" mat-button> Join Assessment</button>
+    <button class="join-btn" mat-button> {{ primaryButtonText }}</button>
   </mat-card-actions>
 </mat-card>
