--- a/real-time-vocabulary-app/libs/share-ui/src/lib/header/header.component.html
+++ b/real-time-vocabulary-app/libs/share-ui/src/lib/header/header.component.html
@@ -13,7 +13,6 @@
   <span class="spacer"></span>
 
   <div class="user-profile">
-    <mat-icon>account_circle</mat-icon>
-    <span class="username">Son</span>
+    <span class="username">{{ user.firstName }} {{ user.lastName }}</span>
   </div>
 </mat-toolbar>
