--- a/real-time-vocabulary-app/libs/share-ui/src/lib/information-card/information-card.component.html
+++ b/real-time-vocabulary-app/libs/share-ui/src/lib/information-card/information-card.component.html
@@ -1,6 +1,6 @@
 <mat-card (click)="onCardClick()" class="assessment-card">
   <mat-card-header>
-    <mat-card-title>{{ assessment.title }}</mat-card-title>
+    <mat-card-title>{{ assessment.name }}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <p>{{ assessment.description }}</p>
